# onscreenski

backend/: .gitignore  Makefile  README.md  ukeynski.c
frontend/: Cargo.toml  README.md
frontend/assets/: default-style.css  default.toml
frontend/src/: config.rs  main.rs
frontend/src/layout/: assets.rs  mod.rs  parse.rs
frontend/src/native/: mod.rs
frontend/src/service/: host.rs  mod.rs
frontend/src/ui/: main_view.rs  mod.rs  supported_keys.rs
frontend/src/ui/components/: button_ex.rs
