[package]
name = "onscreenski"
version = "0.1.2"
edition = "2024"
license = "MIT"
readme = "README.md"
keywords = ["wayland", "keyboard", "input"]
homepage = "https://github.com/nichtsfrei/onscreenski"
repository = "https://github.com/nichtsfrei/onscreenski"
description = "An frontend using onscreenski (uinput)"


[dependencies]
serde = { version = "1", features = ["derive"] }
gtk4-layer-shell = "0"
relm4 = "0"
rust-embed = "8"
toml = "0"
gdk4 = "0"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
xdg = "2"
tracing = "0"
tracing-subscriber = "0"
